added don't have account button on login page

--- a/client/style.css
+++ b/client/style.css
@@ -25,6 +25,22 @@ h1 {
   color: #333;
 }
 
+.switch-link {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 14px;
+}
+
+.switch-link a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.switch-link a:hover {
+  text-decoration: underline;
+}
+
+
 .form-group {
   margin-bottom: 20px;
 }
