--- a/client/style.css
+++ b/client/style.css
@@ -134,6 +134,20 @@ input[type="password"] {
   background-color: #666;
 }
 
+.quantity-selector {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.quantity-input {
+  width: 60px;
+  padding: 5px;
+  text-align: center;
+}
+
+
 
 /* -------- רווח לגוף שמתחת לתפריט -------- */
 body.with-nav {
