--- a/client/style.css
+++ b/client/style.css
@@ -219,7 +219,7 @@ body.with-nav {
   .product-card,
   .pagination-info {
     background-color: #1e1e1e;
-    color: #f0f0f0;
+    color: #121212;
     border-color: #444;
   }
 
